--- a/Clima_app_pruebaTecnica/src/index.css
+++ b/Clima_app_pruebaTecnica/src/index.css
@@ -1,19 +1,38 @@
 body {
-  font-family: 'Quicksand', sans-serif;
-  background-color: #f1f5f9;
+  font-family: "Quicksand", sans-serif;
   font-size: 1.6rem;
+  color: white;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: 300% 300%;
+  background-image: linear-gradient(
+        -45deg, 
+        rgba(59,173,227,1) 0%, 
+        rgb(14, 18, 34) 25%, 
+        rgba(152,68,183,1) 51%, 
+        rgb(255, 167, 53) 100%
+  );  
+  animation: AnimateBG 20s ease infinite;
+}
+@keyframes AnimateBG { 
+  0%{background-position:0% 60%}
+  50%{background-position:100% 20%}
+  100%{background-position:0% 80%}
 }
 header {
-  background-color: #0ea5e9;
+  background-color: #d686f3;
   padding: 1.5rem;
-  border-bottom: 1rem solid #0284c7;
+  border-bottom: 1rem solid #6b049b;
 }
 header h1 {
   text-align: center;
   color: white;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   font-size: 3rem;
-  margin:0;
+  margin: 0;
 }
 .dos-columnas {
   display: grid;
@@ -25,17 +44,20 @@ header h1 {
   }
 }
 main {
-  margin: 4rem ;
+  margin: 4rem;
   max-width: 1200px;
 }
 .contenedor {
-  margin: 3px;
-  border-radius: .5rem;
-  background-color: white;
-  padding: 4rem;
-  -webkit-box-shadow: 0px 10px 33px -17px rgba(173,173,173,1);
-  -moz-box-shadow: 0px 10px 33px -17px rgba(173,173,173,1);
-  box-shadow: 0px 10px 33px -17px rgba(173,173,173,1);
+  padding: 9px;
+  background: rgba(93, 237, 253, 0.21);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(1, 0, 2, 0.9);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(95, 230, 245, 0.3);
+  -webkit-box-shadow: 0px 10px 33px -17px rgba(173, 173, 173, 1);
+  -moz-box-shadow: 0px 10px 33px -17px rgba(173, 173, 173, 1);
+  box-shadow: 0px 10px 33px -17px rgba(173, 173, 173, 1);
   width: 100%;
 }
 form {
@@ -47,39 +69,38 @@ form {
 }
 .campo label {
   display: block;
-
 }
 .campo input,
 .campo select {
   all: unset;
   border: 1px solid #cbd5e1;
-  width: 100%;
+  width: 90%;
   border-radius: 1rem;
-  padding: .5rem;
+  padding: 0.5rem;
+  color: #333;
 }
 
- input[type="submit"] {
-  background-color: #0ea5e9;
+input[type="submit"] {
+  background-color: #a483cf;
   margin: 2rem auto 0 auto;
   display: block;
   padding: 1rem 3rem;
   color: white;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   font-size: 27px;
   border: none;
   border-radius: 9px;
   width: 100%;
-  transition: background-color .3s ease;
+  transition: background-color 0.3s ease;
 }
 @media (min-width: 768px) {
-   input[type="submit"]  {
-     max-width: 400px;
+  input[type="submit"] {
+    max-width: 400px;
   }
 }
- input[type="submit"]:hover {
-  background-color: #0369a1;
+input[type="submit"]:hover {
+  background-color: #6f03a1;
 }
-
 
 .loading {
   display: flex;
@@ -87,24 +108,22 @@ form {
   align-items: center;
   width: 100%;
 }
-.clima{
-
+.clima {
 }
-.clima > p:first-of-type{
-font-size: 6rem;
-font-weight: 700;
+.clima > p:first-of-type {
+  font-size: 6rem;
+  font-weight: 700;
 }
 
 .clima p {
   text-align: center;
   margin: 0 0;
 }
-.temp_min_max{
+.temp_min_max {
   margin-top: 2rem;
   display: flex;
   justify-content: center;
   gap: 2rem;
-
 }
 
 .spinner {
@@ -113,12 +132,13 @@ font-weight: 700;
   height: 40px;
   position: relative;
   text-align: center;
-  
-  -webkit-animation: sk-rotate 2.0s infinite linear;
-  animation: sk-rotate 2.0s infinite linear;
+
+  -webkit-animation: sk-rotate 2s infinite linear;
+  animation: sk-rotate 2s infinite linear;
 }
 
-.dot1, .dot2 {
+.dot1,
+.dot2 {
   width: 60%;
   height: 60%;
   display: inline-block;
@@ -126,32 +146,48 @@ font-weight: 700;
   top: 0;
   background-color: #333;
   border-radius: 100%;
-  
-  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
-  animation: sk-bounce 2.0s infinite ease-in-out;
+
+  -webkit-animation: sk-bounce 2s infinite ease-in-out;
+  animation: sk-bounce 2s infinite ease-in-out;
 }
 
 .dot2 {
   top: auto;
   bottom: 0;
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
 }
 
-@-webkit-keyframes sk-rotate { 100% { -webkit-transform: rotate(360deg) }}
-@keyframes sk-rotate { 100% { transform: rotate(360deg); -webkit-transform: rotate(360deg) }}
+@-webkit-keyframes sk-rotate {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes sk-rotate {
+  100% {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+  }
+}
 
 @-webkit-keyframes sk-bounce {
-  0%, 100% { -webkit-transform: scale(0.0) }
-  50% { -webkit-transform: scale(1.0) }
+  0%,
+  100% {
+    -webkit-transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1);
+  }
 }
 
 @keyframes sk-bounce {
-  0%, 100% { 
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 50% { 
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
+  0%,
+  100% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
   }
 }
